--- a/e-sensing.bib
+++ b/e-sensing.bib
@@ -74,18 +74,6 @@
   doi = {10.1109/TPAMI.2012.120}
 }
 
-@article{Achanta2012a,
-  title = {{{SLIC Superpixels Compared}} to {{State-of-the-Art Superpixel Methods}}},
-  author = {Achanta, Radhakrishna and Shaji, Appu and Smith, Kevin and Lucchi, Aurelien and Fua, Pascal and S{\"u}sstrunk, Sabine},
-  year = {2012},
-  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  volume = {34},
-  number = {11},
-  pages = {2274--2282},
-  issn = {1939-3539},
-  doi = {10.1109/TPAMI.2012.120}
-}
-
 @inproceedings{Achanta2017,
   title = {Superpixels and {{Polygons Using Simple Non-iterative Clustering}}},
   booktitle = {2017 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
@@ -2757,6 +2745,14 @@
   doi = {10.1111/j.1467-9787.1995.tb01298.x}
 }
 
+@book{Cressie2011,
+  title = {Statistics for {{Spatio-Temporal Data}} | {{Wiley}}},
+  author = {Cressie, Noel and Wikle, Christopher},
+  year = {2011},
+  publisher = {{Wiley}},
+  address = {{Hoboken, NJ}}
+}
+
 @article{Cruz2021,
   title = {An Overview of Forest Loss and Restoration in the {{Brazilian Amazon}}},
   author = {Cruz, Denis Conrado and Benayas, Jos{\'e} Maria Rey and Ferreira, Gracialda Costa and Santos, Sabrina Ribeiro and Schwartz, Gustavo},
@@ -3129,6 +3125,19 @@
   issn = {2072-4292},
   doi = {10.3390/rs14153658},
   copyright = {http://creativecommons.org/licenses/by/3.0/}
+}
+
+@article{DoblasPrieto2023,
+  title = {Inter-Comparison of Optical and {{SAR-based}} Forest Disturbance Warning Systems in the {{Amazon}} Shows the Potential of Combined {{SAR-optical}} Monitoring},
+  author = {Doblas Prieto, Juan and Lima, Lucas and Mermoz, Stephane and Bouvet, Alexandre and Reiche, Johannes and Watanabe, Manabu and Sant Anna, Sidnei and Shimabukuro, Yosio},
+  year = {2023},
+  journal = {International Journal of Remote Sensing},
+  volume = {44},
+  number = {1},
+  pages = {59--77},
+  publisher = {{Taylor \& Francis}},
+  issn = {0143-1161},
+  doi = {10.1080/01431161.2022.2157684}
 }
 
 @article{Dockendorff2022,
@@ -4285,6 +4294,15 @@
   address = {{Berlin, Heidelberg}},
   doi = {10.1007/3-540-32202-7_3},
   isbn = {978-3-540-32202-3}
+}
+
+@book{Gelman2013,
+  title = {Bayesian {{Data Analysis}}, {{Third Edition}}},
+  author = {Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
+  year = {2013},
+  publisher = {{CRC Press}},
+  googlebooks = {ZXL6AQAAQBAJ},
+  isbn = {978-1-4398-4095-5}
 }
 
 @article{Georganos2018,
@@ -5517,6 +5535,18 @@
   pages = {513--532},
   issn = {1749-8198},
   doi = {10.1111/j.1749-8198.2012.00507.x}
+}
+
+@article{Hughes1968,
+  title = {On the Mean Accuracy of Statistical Pattern Recognizers},
+  author = {Hughes, G.},
+  year = {1968},
+  journal = {IEEE Transactions on Information Theory},
+  volume = {14},
+  number = {1},
+  pages = {55--63},
+  issn = {1557-9654},
+  doi = {10.1109/TIT.1968.1054102}
 }
 
 @article{Hughes1989,
@@ -7941,6 +7971,15 @@
   copyright = {http://creativecommons.org/licenses/by/3.0/}
 }
 
+@techreport{Neeff2023,
+  title = {Estimating Emissions and Removals from Forest Degradation},
+  author = {Neeff, Till and Vollrath, Andreas and {Erik Lindquist} and {Javier Garc\'ia Perez} and {Julian Fox} and {Marieke Sandker} and {Teopista Nakalema}},
+  year = {2023},
+  institution = {{FAO}},
+  doi = {10.4060/cc5803en},
+  isbn = {9789251378618}
+}
+
 @article{Nelson2009,
   title = {Praying for Drought: Persistent Vulnerability and the Politics of Patronage in {{Cear\'a}}, {{Northeast Brazil}}},
   author = {Nelson, Donald and Finan, Timothy},
@@ -8391,6 +8430,13 @@
   pages = {439},
   issn = {2073-4859},
   doi = {10.32614/RJ-2018-009}
+}
+
+@misc{Pebesma2023,
+  title = {Spatial {{Data Science}}},
+  author = {Pebesma, Edzer and Bivand, Roger S.},
+  year = {2023},
+  howpublished = {https://r-spatial.org/book/}
 }
 
 @article{Pekel2016,
@@ -9047,6 +9093,20 @@
   doi = {10.1088/1748-9326/abd0a8}
 }
 
+@article{Reiner2023,
+  title = {More than One Quarter of {{Africa}}'s Tree Cover Is Found Outside Areas Previously Classified as Forest},
+  author = {Reiner, Florian and Brandt, Martin and Tong, Xiaoye and Skole, David and Kariryaa, Ankit and Ciais, Philippe and Davies, Andrew and Hiernaux, Pierre and Chave, J{\'e}r{\^o}me and Mugabowindekwe, Maurice and Igel, Christian and Oehmcke, Stefan and Gieseke, Fabian and Li, Sizhuo and Liu, Siyu and Saatchi, Sassan and Boucher, Peter and Singh, Jenia and Taugourdeau, Simon and Dendoncker, Morgane and Song, Xiao-Peng and Mertz, Ole and Tucker, Compton J. and Fensholt, Rasmus},
+  year = {2023},
+  journal = {Nature Communications},
+  volume = {14},
+  number = {1},
+  pages = {2258},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-023-37880-4},
+  copyright = {2023 The Author(s)}
+}
+
 @article{Ribeiro2002,
   title = {A Structural Gradient in Cerrado Vegetation of {{Brazil}}: Changes in Woody Plant Density, Species Richness, Life History and Plant Composition},
   author = {Ribeiro, Luci and Tabarelli, Marcelo},
@@ -9360,6 +9420,17 @@
 }
 
 @article{Russwurm2023,
+  title = {End-to-End Learned Early Classification of Time Series for in-Season Crop Type Mapping},
+  author = {Ru{\ss}wurm, Marc and Courty, Nicolas and Emonet, R{\'e}mi and Lef{\`e}vre, S{\'e}bastien and Tuia, Devis and Tavenard, Romain},
+  year = {2023},
+  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume = {196},
+  pages = {445--456},
+  issn = {0924-2716},
+  doi = {10.1016/j.isprsjprs.2022.12.016}
+}
+
+@article{Russwurm2023a,
   title = {End-to-End Learned Early Classification of Time Series for in-Season Crop Type Mapping},
   author = {Ru{\ss}wurm, Marc and Courty, Nicolas and Emonet, R{\'e}mi and Lef{\`e}vre, S{\'e}bastien and Tuia, Devis and Tavenard, Romain},
   year = {2023},
@@ -10761,6 +10832,17 @@
   doi = {10.1109/MGRS.2016.2548504}
 }
 
+@article{Turkoglu2021,
+  title = {Crop Mapping from Image Time Series: {{Deep}} Learning with Multi-Scale Label Hierarchies},
+  author = {Turkoglu, Mehmet Ozgur and D'Aronco, Stefano and Perich, Gregor and Liebisch, Frank and Streit, Constantin and Schindler, Konrad and Wegner, Jan Dirk},
+  year = {2021},
+  journal = {Remote Sensing of Environment},
+  volume = {264},
+  pages = {112603},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2021.112603}
+}
+
 @article{Tyukavina2017,
   title = {Types and Rates of Forest Disturbance in {{Brazilian Legal Amazon}}, 2000\textendash 2013},
   author = {Tyukavina, Alexandra and Hansen, Matthew C. and Potapov, Peter V. and Stehman, Stephen V. and {Smith-Rodriguez}, Kevin and Okpa, Chima and Aguilar, Ricardo},
@@ -11055,6 +11137,18 @@
   doi = {10.1111/gcbb.12270}
 }
 
+@article{Vesanto2000,
+  title = {Clustering of the Self-Organizing Map},
+  author = {Vesanto, J. and Alhoniemi, E.},
+  year = {2000},
+  journal = {IEEE Transactions on Neural Networks},
+  volume = {11},
+  number = {3},
+  pages = {586--600},
+  issn = {1941-0093},
+  doi = {10.1109/72.846731}
+}
+
 @article{Villen-Perez2018,
   title = {Mining Code Changes Undermine Biodiversity Conservation in {{Brazil}}},
   author = {{Villen-Perez}, Sara and Mendes, Poliana and N{\'o}brega, Caroline and Cortes, Lara Gomes and Marco, Paulo De},
@@ -11216,6 +11310,19 @@
   publisher = {{Taylor \& Francis}},
   issn = {1758-3004},
   doi = {10.1080/17583004.2014.990680}
+}
+
+@incollection{Waller2005,
+  title = {Bayesian {{Thinking}} in {{Spatial Statistics}}},
+  booktitle = {Handbook of {{Statistics}}},
+  author = {Waller, Lance A.},
+  editor = {Dey, D. K. and Rao, C. R.},
+  year = {2005},
+  series = {Bayesian {{Thinking}}},
+  volume = {25},
+  pages = {589--622},
+  publisher = {{Elsevier}},
+  doi = {10.1016/S0169-7161(05)25020-4}
 }
 
 @phdthesis{Walter2006,
@@ -11462,6 +11569,14 @@
   pages = {244--255},
   issn = {0304-3800},
   doi = {10.1016/j.ecolmodel.2007.10.005}
+}
+
+@book{Wilke2019,
+  title = {Spatio-{{Temporal Statistics}} with {{R}}},
+  author = {Wilke, Christopher and {Zammit-Mangion}, Andrew and Cressie, Noel},
+  year = {2019},
+  publisher = {{CRC Press}},
+  address = {{Boca Raton, FL}}
 }
 
 @article{Wilkinson2016,
